--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
                             <button type="submit" class="btn btn-primary account-btn">Login</button>
                         </div>
                         <div class="text-center register-link">
-                            No tiene una cuenta? <a href="register.html">Registrar ahora</a>
+                            No tiene una cuenta? <a href="registrar.html">Registrar ahora</a>
                         </div>
                     </form>
                 </div>
