--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                             <input type="password" class="form-control">
                         </div>
                         <div class="form-group text-right">
-                            <a href="forgot-password.html">¿Olvidó su password?</a>
+                            <a href="olvido-su-password.html">¿Olvidó su password?</a>
                         </div>
                         <div class="form-group text-center">
                             <button type="submit" class="btn btn-primary account-btn">Login</button>
