--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<span>Admin</span>
                     </a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="profile.html">Mi Perfil</a>
+						<a class="dropdown-item" href="mi-perfil.html">Mi Perfil</a>
 						<a class="dropdown-item" href="edit-profile.html">Editar Perfil</a>
 						<a class="dropdown-item" href="settings.html">Seteos</a>
 						<a class="dropdown-item" href="login.html">Salir</a>
@@ -119,7 +119,7 @@
             <div class="dropdown mobile-user-menu float-right">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
                 <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="profile.html">Mi Perfil</a>
+                    <a class="dropdown-item" href="mi-perfil.html">Mi Perfil</a>
                     <a class="dropdown-item" href="edit-profile.html">Editar Perfil</a>
                     <a class="dropdown-item" href="settings.html">Seteos</a>
                     <a class="dropdown-item" href="login.html">Salir</a>
