--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><i class="fa fa-bell-o"></i> <span class="badge badge-pill bg-danger float-right">3</span></a>
                     <div class="dropdown-menu notifications">
                         <div class="topnav-dropdown-header">
-                            <span>Notifications</span>
+                            <span>Notificaciones</span>
                         </div>
                         <div class="drop-scroll">
                             <ul class="notification-list">
@@ -226,11 +226,11 @@
                             <a href="#"><i class="fa fa-columns"></i> <span>Pages</span> <span class="menu-arrow"></span></a>
                             <ul style="display: none;">
                                 <li><a href="login.html"> Login </a></li>
-                                <li><a href="register.html"> Register </a></li>
+                                <li><a href="registrar.html"> Registro </a></li>
                                 <li><a href="forgot-password.html"> Forgot Password </a></li>
                                 <li><a href="change-password2.html"> Change Password </a></li>
                                 <li><a href="lock-screen.html"> Lock Screen </a></li>
-                                <li><a href="profile.html"> Profile </a></li>
+                                <li><a href="mi-perfiol.html">Mi Perfil </a></li>
                                 <li><a href="gallery.html"> Gallery </a></li>
                                 <li><a href="error-404.html">404 Error </a></li>
                                 <li><a href="error-500.html">500 Error </a></li>
@@ -271,7 +271,7 @@
 							<span class="dash-widget-bg1"><i class="fa fa-stethoscope" aria-hidden="true"></i></span>
 							<div class="dash-widget-info text-right">
 								<h3>98</h3>
-								<span class="widget-title1">Doctors <i class="fa fa-check" aria-hidden="true"></i></span>
+								<span class="widget-title1">Profesionales <i class="fa fa-check" aria-hidden="true"></i></span>
 							</div>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                             <span class="dash-widget-bg2"><i class="fa fa-user-o"></i></span>
                             <div class="dash-widget-info text-right">
                                 <h3>1072</h3>
-                                <span class="widget-title2">Patients <i class="fa fa-check" aria-hidden="true"></i></span>
+                                <span class="widget-title2">Pacientes <i class="fa fa-check" aria-hidden="true"></i></span>
                             </div>
                         </div>
                     </div>
@@ -289,7 +289,7 @@
                             <span class="dash-widget-bg3"><i class="fa fa-user-md" aria-hidden="true"></i></span>
                             <div class="dash-widget-info text-right">
                                 <h3>72</h3>
-                                <span class="widget-title3">Attend <i class="fa fa-check" aria-hidden="true"></i></span>
+                                <span class="widget-title3">Atención <i class="fa fa-check" aria-hidden="true"></i></span>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                             <span class="dash-widget-bg4"><i class="fa fa-heartbeat" aria-hidden="true"></i></span>
                             <div class="dash-widget-info text-right">
                                 <h3>618</h3>
-                                <span class="widget-title4">Pending <i class="fa fa-check" aria-hidden="true"></i></span>
+                                <span class="widget-title4">Pendiente <i class="fa fa-check" aria-hidden="true"></i></span>
                             </div>
                         </div>
                     </div>
@@ -308,8 +308,8 @@
 						<div class="card">
 							<div class="card-body">
 								<div class="chart-title">
-									<h4>Patient Total</h4>
-									<span class="float-right"><i class="fa fa-caret-up" aria-hidden="true"></i> 15% Higher than Last Month</span>
+									<h4>Patientes Totales</h4>
+									<span class="float-right"><i class="fa fa-caret-up" aria-hidden="true"></i> Aumento del 15% respecto mes anterior</span>
 								</div>	
 								<canvas id="linegraph"></canvas>
 							</div>
@@ -319,11 +319,11 @@
 						<div class="card">
 							<div class="card-body">
 								<div class="chart-title">
-									<h4>Patients In</h4>
+									<h4>Patients Ingresados</h4>
 									<div class="float-right">
 										<ul class="chat-user-total">
-											<li><i class="fa fa-circle current-users" aria-hidden="true"></i>ICU</li>
-											<li><i class="fa fa-circle old-users" aria-hidden="true"></i> OPD</li>
+											<li><i class="fa fa-circle current-users" aria-hidden="true"></i>UCO</li>
+											<li><i class="fa fa-circle old-users" aria-hidden="true"></i> Externos</li>
 										</ul>
 									</div>
 								</div>	
@@ -336,17 +336,17 @@
 					<div class="col-12 col-md-6 col-lg-8 col-xl-8">
 						<div class="card">
 							<div class="card-header">
-								<h4 class="card-title d-inline-block">Upcoming Appointments</h4> <a href="appointments.html" class="btn btn-primary float-right">View all</a>
+								<h4 class="card-title d-inline-block">Próximos turnos</h4> <a href="appointments.html" class="btn btn-primary float-right">Ver todos</a>
 							</div>
 							<div class="card-body p-0">
 								<div class="table-responsive">
 									<table class="table mb-0">
 										<thead class="d-none">
 											<tr>
-												<th>Patient Name</th>
-												<th>Doctor Name</th>
-												<th>Timing</th>
-												<th class="text-right">Status</th>
+												<th>Nombre Paciente</th>
+												<th>Nombre Profesional</th>
+												<th>Turno</th>
+												<th class="text-right">Estado</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -356,15 +356,15 @@
 													<h2><a href="profile.html">Bernardo Galaviz <span>New York, USA</span></a></h2>
 												</td>                 
 												<td>
-													<h5 class="time-title p-0">Appointment With</h5>
+													<h5 class="time-title p-0">Cita con</h5>
 													<p>Dr. Cristina Groves</p>
 												</td>
 												<td>
-													<h5 class="time-title p-0">Timing</h5>
+													<h5 class="time-title p-0">Turno</h5>
 													<p>7.00 PM</p>
 												</td>
 												<td class="text-right">
-													<a href="appointments.html" class="btn btn-outline-primary take-btn">Take up</a>
+													<a href="appointments.html" class="btn btn-outline-primary take-btn">Comienzo</a>
 												</td>
 											</tr>
 											<tr>
