--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 						<div class="card">
 							<div class="card-body">
 								<div class="chart-title">
-									<h4>Patientes Totales</h4>
+									<h4>Pacientes Totales</h4>
 									<span class="float-right"><i class="fa fa-caret-up" aria-hidden="true"></i> Aumento del 15% respecto mes anterior</span>
 								</div>	
 								<canvas id="linegraph"></canvas>
@@ -319,7 +319,7 @@
 						<div class="card">
 							<div class="card-body">
 								<div class="chart-title">
-									<h4>Patients Ingresados</h4>
+									<h4>Pacientes Ingresados</h4>
 									<div class="float-right">
 										<ul class="chat-user-total">
 											<li><i class="fa fa-circle current-users" aria-hidden="true"></i>UCO</li>
