--- a/login.html
+++ b/login.html
@@ -48,12 +48,11 @@
 			</div>
         </div>
     </div>
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
+    	<script src="assets/js/jquery-3.2.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/app.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<!-- add the lines below existing code -->
+  	<script src="https://cdn.auth0.com/js/auth0-spa-js/1.7/auth0-spa-js.production.js"></script>
+  	<script src="js/app.js"></script>
 </body>
-
-
-<!-- login23:12-->
 </html>
