--- a/login.html
+++ b/login.html
@@ -53,6 +53,6 @@
 	<script src="assets/js/bootstrap.min.js"></script>
 	<!-- add the lines below existing code -->
   	<script src="https://cdn.auth0.com/js/auth0-spa-js/1.7/auth0-spa-js.production.js"></script>
-  	<script src="js/app.js"></script>
+  	<script src="app.js"></script>
 </body>
 </html>
