--- a/index-1.html
+++ b/index-1.html
@@ -858,7 +858,8 @@
     <script src="assets/js/jquery.slimscroll.js"></script>
     <script src="assets/js/Chart.bundle.js"></script>
     <script src="assets/js/chart.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="app.js"></script>
+	<script src="https://cdn.auth0.com/js/auth0-spa-js/1.7/auth0-spa-js.production.js"></script>
 
 </body>
 
