--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <p>Welcome to our page!</p>
     <button id="btn-login" disabled="true" onclick="login()">Log in</button>
     <button id="btn-logout" disabled="true" onclick="logout()">Log out</button>
+    
+    <!-- add the lines below existing code -->
+  <script src="https://cdn.auth0.com/js/auth0-spa-js/1.7/auth0-spa-js.production.js"></script>
+  <script src="app.js"></script>
+</body>
   </body>
 </html>
